data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3884.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\9b\80\80\80\00\02\60"
    "\14\7f\7f\7f\7f\7f\7f\7f\7f\7f\7f\7f\7f\7f\7f\7f"
    "\7f\7f\7f\7f\7f\00\60\00\00\02\99\80\80\80\00\01"
    "\03\65\6e\76\11\6c\61\72\67\65\5f\70\61\72\61\6d"
    "\73\5f\66\75\6e\63\00\00\03\82\80\80\80\00\01\01"
    "\0a\b2\80\80\80\00\01\ac\80\80\80\00\00\41\01\41"
    "\02\41\03\41\04\41\05\41\06\41\07\41\08\41\09\41"
    "\0a\41\0b\41\0c\41\0d\41\0e\41\0f\41\10\41\11\41"
    "\12\41\13\41\14\10\00\0b"
  )
""
)